--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "airbnb-clone",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon api/index.js",
