--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
-    "build": "yarn install && yarn --cwd client install && yarn --cwd client build"
+    "render-build": "yarn install && yarn --cwd client install && yarn --cwd client build"
   },
   "keywords": [],
   "author": "",
